--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,6 @@
 ---
 ---
 
-//
-// IMPORTS
-//
-
 @import "reset";
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
@@ -24,10 +20,14 @@ body {
 }
 
 .container {
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 740px;
-  padding: 0 10px;
-  width: 100%;
+
+  @include mobile {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -130,49 +130,13 @@ img {
   background: $lightGray;
 }
 
-// Nicolas Gallagher's micro clearfix hack
-// http://nicolasgallagher.com/micro-clearfix-hack/
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/*********************/
-/* LAYOUT / SECTIONS */
-/*********************/
-
-//
-// .masthead
-//
-
-.wrapper-masthead {
-  margin-bottom: 50px;
-}
-
-.masthead {
-  padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
-
-  @include mobile {
-    text-align: center;
-  }
-}
-
 .site-avatar {
-  float: left;
   width: 70px;
   height: 70px;
   margin-right: 15px;
 
   @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
+    display: none;
   }
 
   img {
@@ -180,14 +144,20 @@ img {
   }
 }
 
-.site-info {
-  float: left;
+header {
+  display: flex;
+  flex-direction: row;
+  padding: 1.5rem 0;
+  align-items: center;
+  border-bottom: 2px solid #eee;
 
   @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
+    flex-wrap: wrap;
   }
+}
+
+.site-info {
+  flex-grow: 1;
 }
 
 .site-name {
@@ -196,31 +166,30 @@ img {
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
-  font-size: 28px;
+  font-size: 1.8rem;
   letter-spacing: 1px;
+
+  @include mobile {
+    font-size: 1.2rem;
+  }
 }
 
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
-  font-size: 16px;
 
   @include mobile {
-    margin: 3px 0;
+    display: none;
   }
 }
 
 nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
+  text-align: right;
 
   @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   a {
@@ -231,7 +200,7 @@ nav {
     letter-spacing: 1px;
 
     @include mobile {
-      margin: 0 10px;
+      margin: 0 5px;
       color: $blue;
     }
   }
