--- a/style.scss
+++ b/style.scss
@@ -107,7 +107,13 @@ strong, b {
 }
 
 img {
-  max-width: 100%;
+  max-width: calc(100% + 6rem);
+  margin: 0 -3rem;
+
+  @include mobile {
+    max-width: 100%;
+    margin: initial;
+  }
 }
 
 // Fixes images in popup boxes from Google Translate
