--- a/style.scss
+++ b/style.scss
@@ -116,6 +116,10 @@ img {
   }
 }
 
+iframe {
+  max-width: 100%;
+}
+
 // Fixes images in popup boxes from Google Translate
 .gmnoprint img {
   max-width: none;
@@ -159,6 +163,7 @@ header {
 
   @include mobile {
     flex-wrap: wrap;
+    padding: 0.8rem 0;
   }
 }
 
@@ -176,7 +181,7 @@ header {
   letter-spacing: 1px;
 
   @include mobile {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 }
 
