--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
       </div>
 
       <nav>
+        <a href="https://github.com/ajdaniel/ajdaniel.github.io">GitHub</a>
         <a href="{{ site.baseurl }}/">Blog</a>
         <a href="{{ site.baseurl }}/about">About</a>
       </nav>
