--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,6 +10,8 @@ $gray: #666;
 $lightGray: #eee;
 $white: #fff;
 
+$link: #8c3cde;
+
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
