--- a/style.scss
+++ b/style.scss
@@ -68,13 +68,21 @@ p {
   margin: 15px 0;
 }
 
+::selection {
+  color: white;
+  background: $link;
+}
+
 a {
-  color: $blue;
+  color: $link;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: $blue;
+    color: $link;
   }
+	&:hover {
+		text-decoration: underline;
+	}
 }
 
 ul, ol {
