--- a/style.scss
+++ b/style.scss
@@ -114,7 +114,7 @@ strong, b {
   font-weight: bold;
 }
 
-article img {
+article img:not(.emoji) {
   max-width: calc(100% + 6rem);
   margin: 0 -3rem;
 
