--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -13,6 +13,7 @@ pre.highlight {
 code {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-size: 16px;
+  color: white;
   // old font-family: 'Bitstream Vera Sans Mono','Courier', monospace;
 }
 
