--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,10 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
 
+  <h3 class="date">{{ page.date | date: "%B %e, %Y" }}</h3>
+
   <div class="entry">
     {{ content }}
-  </div>
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   {% include disqus.html %}
