Update the date style in a post

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,5 @@
-
 // Colors
-$blue: #4183C4;
+$blue: #4183c4;
 
 // Grays
 $black: #000;
@@ -11,6 +10,7 @@ $lightGray: #eee;
 $white: #fff;
 
 $link: #8c3cde;
+$date: #bbb;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
