--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,7 @@ layout: default
 
   <h3 class="date">{{ page.date | date: "%B %e, %Y" }}</h3>
 
-  <div class="entry">
-    {{ content }}
-  </div>
+  <div class="entry">{{ content }}</div>
 
   {% include disqus.html %}
 </article>
