--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    <title>
+      {% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} –
+      {{ site.description }}
+    </title>
 
     {% include meta.html %}
 
@@ -9,16 +12,29 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ site.baseurl }}/style.css"
+    />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="{{ site.name }} - {{ site.description }}"
+      href="{{ site.baseurl }}/feed.xml"
+    />
   </head>
 
   <body>
     <header class="container">
-      <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+      <a href="{{ site.baseurl }}/" class="site-avatar"
+        ><img src="{{ site.avatar }}"
+      /></a>
 
       <div class="site-info">
-        <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+        <h1 class="site-name">
+          <a href="{{ site.baseurl }}/">{{ site.name }}</a>
+        </h1>
         <p class="site-description">{{ site.description }}</p>
       </div>
 
@@ -37,7 +53,7 @@
       <div class="container">
         <footer class="footer">
           <p>{% include svg-icons.html %}</p>
-          <p>Copyright Andrew Daniel 2018</p>
+          <p>Copyright Andrew James Daniel 2018</p>
         </footer>
       </div>
     </div>
