More Dark mode enhancements

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -2,7 +2,7 @@ div.highlight {
   background-color: #061526;
   padding: 7px 7px 7px 10px;
   margin: 20px 0 20px 0;
-  overflow: scroll;
+  overflow: auto;
   border-radius: 4px;
 }
 
