--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
       </nav>
     </header>
 
-    <div id="main" role="main" class="container">
+    <div id="main" role="main" class="container main">
       {{ content }}
     </div>
 
